# pulumi-yaml

./: .changie.yaml  .gitignore  .gitmodules  .golangci.yml  .goreleaser.prerelease.yml  .goreleaser.yml  .mise.toml  AGENTS.md  BUILD.bazel  CHANGELOG.md  CHANGELOG_PENDING.md  CONTRIBUTING.md  Makefile  README.md  WORKSPACE  convert.patch  deps.bzl  go.mod  go.sum  programgen_analysis.md  renovate.json5
cmd/pulumi-converter-yaml/: BUILD.bazel  main.go
cmd/pulumi-language-yaml/: BUILD.bazel  language_test.go  main.go  mocks.go
cmd/pulumi-language-yaml/testdata/eject-pcl/l1-builtin-base64/: program.pp
cmd/pulumi-language-yaml/testdata/eject-pcl/l1-builtin-cwd/: program.pp
cmd/pulumi-language-yaml/testdata/eject-pcl/l1-builtin-file/: Pulumi.yaml  program.pp
cmd/pulumi-language-yaml/testdata/eject-pcl/l1-builtin-info/: program.pp
cmd/pulumi-language-yaml/testdata/eject-pcl/l1-builtin-list/: Pulumi.yaml  program.pp
cmd/pulumi-language-yaml/testdata/eject-pcl/l1-builtin-project-root/: program.pp
cmd/pulumi-language-yaml/testdata/eject-pcl/l1-builtin-project-root-main/: Pulumi.yaml  program.pp
cmd/pulumi-language-yaml/testdata/eject-pcl/l1-builtin-require-pulumi-version/: program.pp
cmd/pulumi-language-yaml/testdata/eject-pcl/l1-builtin-secret/: Pulumi.yaml  program.pp
cmd/pulumi-language-yaml/testdata/eject-pcl/l1-builtin-sha1/: program.pp
cmd/pulumi-language-yaml/testdata/eject-pcl/l1-builtin-string/: Pulumi.yaml  program.pp
cmd/pulumi-language-yaml/testdata/eject-pcl/l1-builtin-to-json/: program.pp
cmd/pulumi-language-yaml/testdata/eject-pcl/l1-elide-index/: program.pp
cmd/pulumi-language-yaml/testdata/eject-pcl/l1-keyword-overlap/: program.pp
cmd/pulumi-language-yaml/testdata/eject-pcl/l1-main/: Pulumi.yaml  program.pp
cmd/pulumi-language-yaml/testdata/eject-pcl/l1-output-array/: Pulumi.yaml  program.pp
cmd/pulumi-language-yaml/testdata/eject-pcl/l1-output-bool/: Pulumi.yaml  program.pp
cmd/pulumi-language-yaml/testdata/eject-pcl/l1-output-map/: program.pp
cmd/pulumi-language-yaml/testdata/eject-pcl/l1-output-null/: program.pp
cmd/pulumi-language-yaml/testdata/eject-pcl/l1-output-number/: Pulumi.yaml  program.pp
cmd/pulumi-language-yaml/testdata/eject-pcl/l1-output-string/: program.pp
cmd/pulumi-language-yaml/testdata/eject-pcl/l1-proxy-index/: program.pp
pkg/pulumiyaml/: BUILD.bazel  README.md  aliases_typecheck_test.go  analyser.go  analyser_test.go  expr.go  packages.go  packages_test.go  run.go  run_async_diags_test.go  run_inline_test.go  run_invoke_test.go  run_options_test.go  run_plugin_version_test.go  run_test.go  run_token_blocklist_test.go  run_variable_test.go  semver.go  sort.go  sort_test.go  template.go  yaml.go
pkg/pulumiyaml/ast/: BUILD.bazel  expr.go  interpolation.go  interpolation_test.go  property.go  template.go  template_test.go
pkg/pulumiyaml/codegen/: BUILD.bazel  convert.go  convert_test.go  doc.go  doc_test.go  eject.go  eject_test.go  format.go  gen_program.go  gen_program_test.go  load.go  load_test.go  prepare_test.go  utils.go
pkg/pulumiyaml/config/: BUILD.bazel  config.go  config_test.go
pkg/pulumiyaml/diags/: BUILD.bazel  diags.go  types.go  utils.go  utils_test.go
pkg/pulumiyaml/syntax/: BUILD.bazel  diags.go  doc.go  nodes.go  syntax.go  syntax_test.go
pkg/pulumiyaml/syntax/encoding/: BUILD.bazel  doc.go  object.go  yaml.go
pkg/pulumiyaml/testing/test/: BUILD.bazel
pkg/server/: BUILD.bazel  component_provider.go  server.go  server_test.go
pkg/tests/: BUILD.bazel  example_test.go  example_transpile_test.go  integration_test.go  schema-testprovider.json  stack_name.go  utils.go
pkg/tests/examples_transpile/: .gitignore
pkg/tests/examples_transpile/random/: main.go  program.pp
pkg/tests/testdata/about/: Pulumi.yaml
pkg/tests/testdata/component-consumption-tagged/: Pulumi.yaml
pkg/tests/testdata/component-consumption-test/: Pulumi.yaml
pkg/tests/testdata/config-object-type/: Pulumi.yaml
pkg/tests/testdata/config-section-is-used/: Pulumi.yaml
pkg/tests/testdata/env-vars/: Pulumi.yaml
pkg/tests/testdata/import-computed-id/: Pulumi.yaml
pkg/tests/testdata/invalid-resource-object/: Pulumi.yaml
pkg/tests/testdata/local/: Pulumi.yaml
pkg/tests/testdata/mismatched-config-type/: Pulumi.yaml
pkg/tests/testdata/parameterized/: Pulumi.yaml
pkg/tests/testdata/plugin-download-url/: Pulumi.yaml
pkg/tests/testdata/project-config-ref/: Pulumi.yaml
pkg/tests/testdata/project-config-with-secret/: Pulumi.dev.yaml  Pulumi.yaml
pkg/tests/testdata/property-access-on-objects/: Pulumi.yaml
pkg/tests/testdata/regression-827/: Pulumi.yaml
pkg/tests/testdata/resource-ordering/: Pulumi.yaml
pkg/tests/testdata/resource-properties-config/: Pulumi.yaml
pkg/tests/testdata/resource-secret/: Pulumi.yaml
pkg/tests/testdata/type-fail/: Pulumi.yaml
pkg/tests/testprovider/: main.go
pkg/tests/transpiled_examples/: .gitignore
pkg/tests/transpiled_examples/aws-eks/: program.pp
pkg/tests/transpiled_examples/aws-static-website/: program.pp
pkg/tests/transpiled_examples/aws-static-website-pp/: aws-static-website.pp
pkg/tests/transpiled_examples/awsx-fargate-pp/: awsx-fargate.pp
pkg/tests/transpiled_examples/azure-app-service/: program.pp
pkg/tests/transpiled_examples/azure-container-apps/: program.pp
pkg/tests/transpiled_examples/azure-static-website/: program.pp
pkg/tests/transpiled_examples/getting-started/: program.pp
pkg/tests/transpiled_examples/kubernetes/: program.pp
pkg/tests/transpiled_examples/pulumi-variable/: program.pp
pkg/tests/transpiled_examples/resource-config-pp/: resource-config.pp
pkg/tests/transpiled_examples/stackreference-consumer/: program.pp
pkg/tests/transpiled_examples/stackreference-producer/: program.pp
pkg/tests/transpiled_examples/webserver/: program.pp
pkg/tests/transpiled_examples/webserver-json/: program.pp
pkg/tests/transpiled_examples/webserver-json-pp/: webserver-json.pp
pkg/tests/transpiled_examples/webserver-pp/: webserver.pp
scripts/gocov/: BUILD.bazel  main.go
(+824 files in other folders)
