load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/pulumi/pulumi-yaml
# gazelle:go_naming_convention import_alias
# gazelle:proto package
# gazelle:proto_group go_package
#
# gazelle:exclude pkg/pulumiyaml/testing
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.work",
        "-to_macro=deps.bzl%go_deps",
        "-prune=True",
    ],
    command = "update-repos",
)

filegroup(
    name = "go_mod",
    srcs = glob(["go.mod"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "README",
    srcs = glob(["README.md"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "examples",
    srcs = glob(["examples/**"]),
    visibility = ["//visibility:public"],
)
