load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "github.com/pulumi/pulumi-yaml/pkg/server",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/pulumiyaml",
        "//pkg/pulumiyaml/ast",
        "//pkg/pulumiyaml/syntax",
        "@com_github_golang_protobuf//ptypes/empty",
        "@com_github_pulumi_pulumi_sdk_v3//go/common/resource/plugin",
        "@com_github_pulumi_pulumi_sdk_v3//go/common/version",
        "@com_github_pulumi_pulumi_sdk_v3//go/common/workspace",
        "@com_github_pulumi_pulumi_sdk_v3//go/pulumi",
        "@com_github_pulumi_pulumi_sdk_v3//proto/go",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)

alias(
    name = "go_default_library",
    actual = ":server",
    visibility = ["//visibility:public"],
)
