load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gocov_lib",
    srcs = ["main.go"],
    importpath = "github.com/pulumi/pulumi-yaml/scripts/gocov",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "gocov",
    embed = [":gocov_lib"],
    visibility = ["//visibility:public"],
)
