load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/pulumi/pulumi-yaml/pkg/pulumiyaml/config",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/pulumiyaml/diags",
        "@com_github_pulumi_pulumi_pkg_v3//codegen/hcl2/model",
        "@com_github_pulumi_pulumi_pkg_v3//codegen/schema",
    ],
)

alias(
    name = "go_default_library",
    actual = ":config",
    visibility = ["//visibility:public"],
)

go_test(
    name = "config_test",
    srcs = ["config_test.go"],
    embed = [":config"],
    deps = ["@com_github_stretchr_testify//assert"],
)
