filegroup(
    name = "codegen_testdata",
    srcs = glob(["testdata/**"]),
    visibility = ["//visibility:public"],
)

genrule(
    name = "fetch_schemas",
    srcs = ["//scripts:get_schemas"],
    outs = [
        "testdata/aws-4.36.0.json",
        "testdata/aws-4.37.1.json",
        "testdata/aws-5.16.2.json",
        "testdata/aws-5.4.0.json",
        "testdata/aws-native-0.13.0.json",
        "testdata/aws-native-0.99.0.json",
        "testdata/aws-static-website-0.4.0.json",
        "testdata/awsx-1.0.0-beta.5.json",
        "testdata/azure-4.18.0.json",
        "testdata/azure-native-1.28.0.json",
        "testdata/azure-native-1.29.0.json",
        "testdata/azure-native-1.56.0.json",
        "testdata/basic-unions-0.1.0.json",
        "testdata/docker-4.0.0-alpha.0.json",
        "testdata/eks-0.37.1.json",
        "testdata/eks-0.40.0.json",
        "testdata/google-native-0.18.2.json",
        "testdata/kubernetes-3.0.0.json",
        "testdata/kubernetes-3.7.0.json",
        "testdata/kubernetes-3.7.2.json",
        "testdata/other-0.1.0.json",
        "testdata/random-4.11.2.json",
        "testdata/random-4.2.0.json",
        "testdata/random-4.3.1.json",
        "testdata/snowflake-0.66.1.json",
        "testdata/splat-1.0.0.json",
        "testdata/std-1.0.0.json",
        "testdata/synthetic-1.0.0.json",
        "testdata/using-dashes-1.0.0.json",
    ],
    cmd = "$(location //scripts:get_schemas) $(GENDIR)",
    visibility = ["//visibility:public"],
    output_to_bindir = True,
)
